--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <app-stalk-someone></app-stalk-someone>
+  <router-outlet></router-outlet>
 
+</div>
