Search input works, TODO route to /stalk

--- a/src/app/components/search-user/search-user.component.html
+++ b/src/app/components/search-user/search-user.component.html
@@ -1,5 +1,7 @@
-<form (submit)="search()" role="search">
-  <label for="search">Enter GitHub username</label>
-  <input id="search" type="search" placeholder="Search..." autofocus required />
+<form (submit)="search()" role="search" [formGroup]="searchFormGroup">
+  <label for="userName">Enter GitHub username</label>
+  <input id="userName" type="search" placeholder="Search..." autofocus required
+      formControlName="userName"
+  />
   <button type="submit">Go</button>
 </form>
