Show all starred repos

--- a/src/app/components/stalk-someone/stalk-someone.component.html
+++ b/src/app/components/stalk-someone/stalk-someone.component.html
@@ -1,4 +1,7 @@
-<p>
 <!--  stalk-someone works! -->
-  {{data}}
-</p>
+<p>{{message}}</p>
+<ul class="heroes">
+  <li *ngFor="let d of data">
+    {{d.name}}
+  </li>
+</ul>
