--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<app-header></app-header>
+<div class="jumbotron">
   <router-outlet></router-outlet>
-
 </div>
