Add card component, should be reusable

--- a/src/app/components/stalk-someone/stalk-someone.component.html
+++ b/src/app/components/stalk-someone/stalk-someone.component.html
@@ -1,13 +1,17 @@
 <!--  stalk-someone works! -->
 <p>{{message}}</p>
 <div id="wrapper">
-  <ul>
-    <li *ngFor="let d of data">
-      {{d.name}}
-      <ul>
-        <li>{{d.description}}</li>
-      </ul>
-      <br/>
-    </li>
-  </ul>
+<!--  <app-repository-card></app-repository-card>-->
+
+  <div *ngFor="let d of data" class="mt-5">
+    <app-repository-card></app-repository-card>
+  </div>
+<!--    <li *ngFor="let d of data">-->
+<!--      {{d.name}}-->
+<!--      <ul>-->
+<!--        <li>{{d.description}}</li>-->
+<!--      </ul>-->
+<!--      <br/>-->
+<!--    </li>-->
+<!--  </div>-->
 </div>
